
                CHANGES in `mboost' VERSION 2.1-0 (2010-03-04)

  o  added base-learners for radial basis functions (brad())
     and smooth monotonic (or convex/concave) functions (bmono())

  o  added base-learners for Markov random fields (bmrf())

  o  bols(x, intercept = FALSE) only reasonable if x is centered

  o  bbs(x, cyclic = TRUE) for cyclic covariates ensures that
     predictions at the boundaries coincide

  o  changed behavior of cvrisk() if weights are used:
     out-of-bag-risk now weighted according to "weights" as
     specified in call to mboost

  o  added family for AUC loss function

  o  improved predict.mboost(): added names where missing and the
     offset as attribute where applicable.


                CHANGES in `mboost' VERSION 2.0-4 (2010-03-17)

  o  added (missing) response functions to families Weibull(),
     Loglog(), Lognormal() and NBinomial()

  o  improvements in documentation


                CHANGES in `mboost' VERSION 2.0-3 (2010-03-10, r456)

  o  glmboost(..., center = TRUE) now also centers columns of the
     design matrix corresponding to contrasts of factors
     when an intercept term is present leading to faster risk
     minimization in these cases.

  o  coef.glmboost: New argument `off2int = TRUE' adds the
     offset to the intercept. In addition, the intercept
     term is now adjusted for centered covariates.

  o  check for infinite residuals in mboost_fit(). Especially
     for family = Poisson(), something like boost_control(nu = 0.01)
     fixes this problem.

  o  "by" (in bols() and bbs()) can now handle factors with more than
     two levels

  o  improved plot.mboost() for varying coefficients

  o  minor improvements in documentation


                CHANGES in `mboost' VERSION 2.0-2 (2010-03-04)

  o  fixed bug in helper function get_index, which caused (in some circumstances)
     wrong handling of factors in gamboost() (spotted by
     Juliane Schaefer <JSchaefer _at_ uhbs.ch>)

